--- a/src/views/genshin-aby.html
+++ b/src/views/genshin-aby.html
@@ -142,7 +142,7 @@
           </div>
           <div class="card credit">
             <div class="credit no-margin">CREATED BY</div>
-            <div class="credit no-margin">Adachi-BOT Of Suzhen Bai</div>
+            <div class="credit no-margin">Adachi-BOT Of</div>
           </div>
         </div>
       </div>
