--- a/src/views/genshin-character.html
+++ b/src/views/genshin-character.html
@@ -23,7 +23,7 @@
 
     <template id="background">
       <div class="background">
-        <p class="author">Created by Adachi-BOT Of Suzhen Bai</p>
+        <p class="author">Created by Adachi-BOT</p>
         <div class="plate"></div>
         <div class="transparent"></div>
 
